# bike-builds-api

./: .gitignore  .package-tools.toml  README.md  pyproject.toml
bike_builds_api/: __init__.py  _utils.py  adapters.py  exceptions.py  logger.py  model.py
docs/: .pages
docs/assets/css/: extra.css
docs/developer_guide/: .pages  installation.md
docs/documentation/: index.md
docs/user_guide/: .pages  index.md  installation.md
tests/: test_simple.py
