[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bike-builds-api"
authors = ["Manuel Schmuck <contact@manuelschmuck.com>"]
description = ""
version = "0.0.0"
readme = "README.md"
packages = [{ include = "bike_builds_api" }]

[tool.poetry.dependencies]
python = "^3.10"
scrape-api = "^0.0.0"
rich = "^13.5.2"
pydantic = "^2.5.0"
